plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-cache'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.postgresql:postgresql'

	implementation 'com.github.ben-manes.caffeine:caffeine'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'



	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	testImplementation 'io.projectreactor:reactor-test:3.5.0'
	testImplementation 'org.mockito:mockito-core:5.3.1' // o versión más reciente
	testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	jvmArgs = [
			"--add-opens=java.base/java.lang=ALL-UNNAMED",
			"-Djdk.attach.allowAttachSelf=true"
	]
	useJUnitPlatform()
}